[package]
name = "zdisasm"
version = "0.1.0"
authors = ["Ta Thanh Dinh <tathanhdinh@gmail.com>"]

[dependencies]
failure = "0.1.2"
lazy_static = "1.1.0"
structopt = "0.2.10"
strum = "0.10.0"
strum_macros = "0.10.0"
maplit = "1.0.1"
tabwriter = "1.1.0"
# zydis = { git = "https://github.com/zyantific/zydis-rs.git", tag = "v0.0.4" }
zydis = { git = "https://github.com/tathanhdinh/zydis-rs.git", branch = "add_get_version" }
